[package]
name = "factorio-update-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11", features = ["blocking"]}
semver = {version = "1.0.14", features=["serde"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
